add Player-ID and API-Token in headers and check them
